fix white space not shown on the preview window

--- a/EasyEditor.css
+++ b/EasyEditor.css
@@ -68,4 +68,5 @@
 	padding: 5px;
 	overflow: scroll;
 	cursor: pointer;
+	white-space: pre;
 }
